[project]
authors = [{name = "Tyler Shoemaker", email = "69219954+t-shoemaker@users.noreply.github.com"}]
dependencies = ["numpy>=2.4.2,<3", "rapidfuzz>=3.14.3,<4"]
name = "treetok"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
treetok = { path = ".", editable = true }

[tool.pixi.environments]
cli = { features = ["huggingface"] }

[tool.pixi.feature.huggingface.pypi-dependencies]
transformers = ">=5.2.0,<6"

[tool.pixi.tasks]
